--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
   "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@cucumber/cucumber": "^11.3.0",
+    "playwright": "^1.53.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
